# sketchybar-system-stats

./: AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  homebrew.yml  release.yml
include/: sketchybar.c  sketchybar.h
src/: cli.rs  main.rs  sketchybar.rs  sketchybar2.rs
src/stats/: battery.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs  uptime.rs
