[package]
name = "stats_provider"
version = "0.8.1"
description = "A simple system stats event provider for Sketchybar."
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.56", features = ["derive"] }
fs2 = "0.4.3"
starship-battery = "0.10.3"
sysinfo = { version = "0.38.0", default-features = false, features = ["component", "disk", "network", "system"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.2"
