[package]
name = "stats_provider"
version = "0.8.1"
description = "A simple system stats event provider for Sketchybar."
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
starship-battery = "0.11.0"
sysinfo = { version = "0.39.1", default-features = false, features = [
  "component",
  "disk",
  "network",
  "system",
] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.2"
